Bunch of code cleanup

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Flappy fish!</title>
     <script src="js/libraries/pixi.js"></script>
     <style>
         body { margin: 0; }
