--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Flappy fish!</title>
     <script src="js/libraries/pixi.js"></script>
     <style>
-        body { margin: 0; }
+        body { margin: 0; background-color: #ded895; }
     </style>
 </head>
 <body>
